[package]
name = "rodent-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
dotenv = "0.15.0"
structopt = "0.3.25"
config = "0.11.0"
tokio = { version = "1.14.0", features = [ "full" ] }
tracing = "0.1.29"
tracing-subscriber = { version="0.3.2", features = [ "env-filter" ] }
axum = "0.4"
serde = { version = "1.0.131", features =[ "derive" ] }
serde_json = "1.0.73"
serde-aux = "3.0.1"
sqlx = { version = "0.5", features = [ "mysql", "runtime-tokio-rustls", "chrono" ] }
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["full"] }
validator = { version = "0.14", features = ["derive"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3.16"
deadpool-redis = "0.10.1"
redis = "0.21.4"
deadpool = "0.9.2"
# async-trait = "0.1.52"