[package]
name = "rodent-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
dotenv = "0.15"
structopt = "0.3"
config = "0.13"
tokio = { version = "1.18", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = [ "env-filter" ] }
axum = "0.5"
serde = { version = "1.0", features =[ "derive" ] }
serde_json = "1.0"
serde-aux = "3.0"
sqlx = { version = "0.5", features = [ "mysql", "runtime-tokio-rustls", "chrono" ] }
tower = "0.4"
tower-http = { version = "0.2.0", features = ["full"] }
validator = { version = "0.14", features = ["derive"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3"
deadpool-redis = "0.10"
redis = "0.21"
deadpool = "0.9"
# async-trait = "0.1.52"